fix: add home button on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,9 @@ header {
     align-items: end;
     display: flex;
     margin: 3rem 0rem;
+    .home {
+        display: none;
+    }
 }
 p {
     font-family: "Open Sans", sans-serif;
@@ -86,6 +89,9 @@ a:hover {
         }
         h3 {
             margin: 0rem 1rem 0rem 0rem;
+        }
+        .home {
+            display: inline;
         }
     }
 }
